force-app/main/default/objects/ERP_PPM_Event__c/ERP_PPM_Event__c.object-meta.xml
<CustomObject>
    <label>ERP PPM Event</label>
    <nameField>
        <displayFormat>PM-{YYYY}{MM}-{0}</displayFormat>
        <label>ERP PPM Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP PPM Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>