force-app/main/default/objects/ERP_PPM_Event__c/fields/Amount_in_Bill_Transaction_Currency__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Bill_Transaction_Currency__c</fullName>
    <label>Amount in Bill Transaction Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>