force-app/main/default/objects/ERP_PPM_Event__c/fields/Application_Source__c.field-meta.xml
<CustomField>
    <fullName>Application_Source__c</fullName>
    <label>Application Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>