force-app/main/default/objects/ERP_PPM_Event__c/fields/Billing_Resource__c.field-meta.xml
<CustomField>
    <fullName>Billing_Resource__c</fullName>
    <label>Billing Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>