force-app/main/default/objects/ERP_PPM_Event__c/fields/Contract_Currency__c.field-meta.xml
<CustomField>
    <fullName>Contract_Currency__c</fullName>
    <label>Contract Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>