force-app/main/default/objects/ERP_PPM_Event__c/fields/Contract_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Number__c</fullName>
    <label>Contract Line Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>