force-app/main/default/objects/ERP_PPM_Event__c/fields/Eligible_for_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Invoicing</label>
    <type>Checkbox</type>
</CustomField>