force-app/main/default/objects/ERP_PPM_Event__c/fields/Event_Source__c.field-meta.xml
<CustomField>
    <fullName>Event_Source__c</fullName>
    <label>Event Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>