force-app/main/default/objects/ERP_PPM_Event__c/fields/Hold_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Hold_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold Revenue</label>
    <type>Checkbox</type>
</CustomField>