force-app/main/default/objects/ERP_PPM_Event__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>ERP PPM Events</relationshipLabel>
    <relationshipName>ERP_PPM_Events</relationshipName>
    <type>Lookup</type>
</CustomField>