force-app/main/default/objects/ERP_PPM_Event__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <label>Project Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>