force-app/main/default/objects/ERP_PPM_Event__c/fields/Recognize_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Recognize_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recognize Revenue</label>
    <type>Checkbox</type>
</CustomField>