force-app/main/default/objects/ERP_PPM_Event__c/fields/Reversed_Event_Number__c.field-meta.xml
<CustomField>
    <fullName>Reversed_Event_Number__c</fullName>
    <label>Reversed Event Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>