force-app/main/default/objects/ERP_PPM_Event__c/fields/Transaction_Task_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Task_Number__c</fullName>
    <label>Transaction Task Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>