force-app/main/default/objects/ERP_PPM_Event__c/fields/zzz_Contract__c.field-meta.xml
<CustomField>
    <fullName>zzz_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zzz_Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>ERP PPM Events</relationshipLabel>
    <relationshipName>ERP_PPM_Events</relationshipName>
    <type>Lookup</type>
</CustomField>