force-app/main/default/objects/ERP_PPM_Event__c/fields/zzz_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>zzz_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zzz_Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ERP PPM Events</relationshipLabel>
    <relationshipName>ERP_PPM_Events</relationshipName>
    <type>Lookup</type>
</CustomField>